# recall

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/recall/: __init__.py  cli.py  errors.py  memory.py  storage.py  types.py
src/recall/embedders/: __init__.py  anthropic.py  base.py  cohere.py  local.py  openai.py
tests/: conftest.py  helpers.py  test_async_memory.py  test_cli.py  test_dimension_mismatch.py  test_edit_and_lifecycle.py  test_find_and_rerank.py  test_import_export.py  test_memory_core.py  test_namespace_ttl_tags.py  test_redact_history.py  test_search_limits.py  test_storage_vector_loading.py  test_store_many.py
