[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "recall-ai"
version = "0.1.0"
description = "Local-first memory for Python apps and AI agents"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Will" }]
keywords = ["memory", "sqlite", "vector-search", "embeddings", "notes", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "sqlite-vec>=0.1.9",
]

[project.optional-dependencies]
local = [
  "sentence-transformers>=3.0.0",
]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
recall = "recall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
